// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <Table /> component Check fragment 1`] = `
<DocumentFragment>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          LICENSE
        </th>
        <th>
          MAKER
        </th>
        <th>
          MODEL
        </th>
        <th>
          REF
        </th>
        <th>
          COLOR
        </th>
        <th>
          MILAGE
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        id="NOF123"
      >
        <td>
          NOF123
        </td>
        <td>
          mercedes-benz
        </td>
        <td>
          2023
        </td>
        <td>
          GLC300
        </td>
        <td>
          blue
        </td>
        <td>
          31278
        </td>
      </tr>
      <tr
        id="IHJ889"
      >
        <td>
          IHJ889
        </td>
        <td>
          audi
        </td>
        <td>
          2020
        </td>
        <td>
          Q5
        </td>
        <td>
          white
        </td>
        <td>
          45123
        </td>
      </tr>
      <tr
        id="UUE654"
      >
        <td>
          UUE654
        </td>
        <td>
          mazda
        </td>
        <td>
          2021
        </td>
        <td>
          CX-9
        </td>
        <td>
          silver
        </td>
        <td>
          55687
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Test <Table /> component Remove button should display 1`] = `
<DocumentFragment>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          LICENSE
        </th>
        <th>
          MAKER
        </th>
        <th>
          MODEL
        </th>
        <th>
          REF
        </th>
        <th>
          COLOR
        </th>
        <th>
          MILAGE
        </th>
        <th>
          OPTIONS
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        id="NOF123"
      >
        <td>
          NOF123
        </td>
        <td>
          mercedes-benz
        </td>
        <td>
          2023
        </td>
        <td>
          GLC300
        </td>
        <td>
          blue
        </td>
        <td>
          31278
        </td>
        <td>
          <button
            id="remove__NOF123"
            role="button"
          >
            Remove
          </button>
        </td>
      </tr>
      <tr
        id="IHJ889"
      >
        <td>
          IHJ889
        </td>
        <td>
          audi
        </td>
        <td>
          2020
        </td>
        <td>
          Q5
        </td>
        <td>
          white
        </td>
        <td>
          45123
        </td>
        <td>
          <button
            id="remove__IHJ889"
            role="button"
          >
            Remove
          </button>
        </td>
      </tr>
      <tr
        id="UUE654"
      >
        <td>
          UUE654
        </td>
        <td>
          mazda
        </td>
        <td>
          2021
        </td>
        <td>
          CX-9
        </td>
        <td>
          silver
        </td>
        <td>
          55687
        </td>
        <td>
          <button
            id="remove__UUE654"
            role="button"
          >
            Remove
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
